@@ -2930,6 +2930,7 @@ gdk_event_translate (MSG  *msg,
       break;
 
     case WM_HSCROLL:
+      /* Just print more debugging information, don't actually handle it. */
       GDK_NOTE (EVENTS,
 		(g_print (" %s",
 			  (LOWORD (msg->wParam) == SB_ENDSCROLL ? "ENDSCROLL" :
@@ -2944,17 +2945,18 @@ gdk_event_translate (MSG  *msg,
 				   "???")))))))))),
 		 (LOWORD (msg->wParam) == SB_THUMBPOSITION ||
 		  LOWORD (msg->wParam) == SB_THUMBTRACK) ?
-		 g_print (" %d", HIWORD (msg->wParam)) : 0));
+		 (g_print (" %d", HIWORD (msg->wParam)), 0) : 0));
       break;
 
     case WM_VSCROLL:
+      /* Just print more debugging information, don't actually handle it. */
       GDK_NOTE (EVENTS,
 		(g_print (" %s",
 			  (LOWORD (msg->wParam) == SB_ENDSCROLL ? "ENDSCROLL" :
 			   (LOWORD (msg->wParam) == SB_BOTTOM ? "BOTTOM" :
 			    (LOWORD (msg->wParam) == SB_TOP ? "TOP" :
 			     (LOWORD (msg->wParam) == SB_LINEDOWN ? "LINDOWN" :
-			      (LOWORD (msg->wParam) == SB_LINEUP ? "LINEIP" :
+			      (LOWORD (msg->wParam) == SB_LINEUP ? "LINEUP" :
 			       (LOWORD (msg->wParam) == SB_PAGEDOWN ? "PAGEDOWN" :
 				(LOWORD (msg->wParam) == SB_PAGEUP ? "PAGEUP" :
 				 (LOWORD (msg->wParam) == SB_THUMBPOSITION ? "THUMBPOSITION" :
@@ -2962,7 +2964,7 @@ gdk_event_translate (MSG  *msg,
 				   "???")))))))))),
 		 (LOWORD (msg->wParam) == SB_THUMBPOSITION ||
 		  LOWORD (msg->wParam) == SB_THUMBTRACK) ?
-		 g_print (" %d", HIWORD (msg->wParam)) : 0));
+		 (g_print (" %d", HIWORD (msg->wParam)), 0) : 0));
       break;
 
     case WM_QUERYNEWPALETTE:
